# VMAware

./: CMakeLists.txt  README.md  README_CN.md  README_FR.md  README_KR.md  TODO.md
.github/workflows/: code_ql_analysis.yml  cross-platform-build.yml  linux_multiarch_build.yml  macos_aarch64_build.yml  ruby_tests.yml  windows.yml
docs/: documentation.md
src/: cli.cpp  vmaware.hpp
